# libmnist

./: CMakeLists.txt  inf.cpp  pytorch_mnist(1).pt
